# python_template

./: Docker-compose.yaml  Dockerfile  README.md  pyproject.toml  test.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: linter.sh  linter.yml  pytest.sh  pytest.yml
