[project]
name = "python-template"
version = "0.1.0"
description = "python template"
readme = "README.md"
requires-python = "<3.14, >=3.12"
dependencies = [
    "jupyterlab==4.5.5",
]

[dependency-groups]
dev = [
    "pydocstyle==6.3.0",
    "pyrefly==0.55.0",
    "pytest==9.0.2",
    "ruff==0.15.2",
]

[tool.uv]
link-mode = "copy"
exclude-newer = "28 days"

[tool.pyrefly]
ignore-missing-imports = ["debug_toolbar.*"]
